--- a/Foodfy/front-end/styles/index.css
+++ b/Foodfy/front-end/styles/index.css
@@ -17,26 +17,6 @@ a {
     color: black;
 }
 
-.content {
-    height: 100%;
-    width: 70%;
-    margin: 0 auto;
-}
-
-.content header {
-    margin-top: 36px;
-    align-items: center;
-    display: flex;
-}
-
-.content header div {
-    margin-left: 105px;
-}
-
-.content header div a {
-    margin: 0 16px;
-}
-
 .banner {
     background-color: #FBDFDB;
     height: 366px;
@@ -77,7 +57,7 @@ a {
 
 .more-acessed-cards {
     max-width: 100%;
-    margin: 0 auto 50px auto;
+    margin: 0 auto 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
@@ -104,19 +84,4 @@ a {
     font-family: Roboto-Regular;
     font-size: 14px;
     color: #777777;
-}
-
-.footer {
-    height: 62px;
-    background: #EEEEEE;
-    display: flex;
-    align-items: center;
-}
-
-.footer p {
-    font-family: Roboto-Regular;
-    margin: 0 auto;
-    font-size: 14px;
-    color: #999999;
-    text-align: center;
 }
