--- a/Foodfy/front-end/styles/header-footer.css
+++ b/Foodfy/front-end/styles/header-footer.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+a {
+    text-decoration: none;
+    font-family: Roboto-Regular;
+    font-size: 16px;
+    color: #111111;
+}
+
 .content {
     height: 100%;
     width: 70%;
