--- a/desafio-02.3/styles/index.css
+++ b/desafio-02.3/styles/index.css
@@ -1,33 +1,146 @@
+@import "https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap";
+
 /*font-family: 'Roboto', sans-serif;*/
-*{
-    margin:  0;
+
+* {
+    margin: 0;
     padding: 0;
     border: 0;
     font-family: 'Roboto', sans-serif;
 }
-body{
+
+body {
     margin: 0;
     border: 0px;
-    background:rgb(18, 3, 61);
+    background: rgb(2, 0, 25);
     color: white;
 }
-header{
+
+header {
     background: rgba(0, 0, 0, 0.5);
-    padding: 30px;
+    text-align: center;
+    padding: 32px;
 }
-header div{
+
+header div {
     text-align: center;
 }
-header div a{
+
+header div a {
     font-size: 20px;
     line-height: 30px;
     color: white;
     text-decoration: none;
     margin: 0 15px;
-    
 }
-header div a:hover{
+
+header div a:hover {
     color: rgb(108, 79, 187);
     transition: color 200ms;
 }
 
+
+/*------------ GRID --------------*/
+
+.section {
+    display: flex;
+}
+
+.grid {
+    width: 70%;
+    display: grid;
+    margin: 32px auto 0px auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 32px;
+}
+
+.curso-card {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    margin-top: 20px;
+    padding: 24px;
+    border-radius: 10px;
+    background-color: #000000;
+    height: 500px;
+}
+
+.img-card {
+    display: flex;
+}
+
+.img-card img {
+    margin: 0 auto;
+}
+
+.content-card {
+    margin: auto 0;
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.car_price {
+    margin: auto;
+    background-color: #352a5c;
+    filter: brightness(80%);
+    padding: 5px 20px;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.modal_overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal {
+    background: white;
+    width: 80%;
+    height: 80%;
+    margin: 5vh auto;
+    position: relative;
+}
+
+.modal .fullscreen-modal {
+    color: black;
+    position: absolute;
+    right: 40px;
+    top: 5px;
+    cursor: pointer;
+}
+
+.modal .close-modal {
+    color: black;
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    cursor: pointer;
+}
+
+
+/*-----Modal overlay. active -----*/
+
+.modal_overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+iframe {
+    width: 100%;
+    height: 90%;
+    position: absolute;
+    top: 6%;
+}
+
+.modal.full {
+    background: white;
+    width: 100%;
+    height: 100%;
+    margin: 5vh auto;
+    position: relative;
+}
