--- a/desafio-03.1/public/index.css
+++ b/desafio-03.1/public/index.css
@@ -1,49 +1,86 @@
 @import "https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap";
+
+/*font-family: 'Roboto', sans-serif;*/
+
 * {
     margin: 0;
     padding: 0;
     border: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    margin: 0;
+    border: 0px;
+    background: rgb(2, 0, 25);
+    color: white;
 }
 
 header {
+    background: rgba(0, 0, 0, 0.5);
     text-align: center;
     padding: 32px;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    border: 0px;
-    background: rgb(18, 3, 61);
+header div {
+    text-align: center;
+}
+
+header div a {
+    font-size: 20px;
+    line-height: 30px;
     color: white;
+    text-decoration: none;
+    margin: 0 15px;
+}
+
+header div a:hover {
+    color: rgb(108, 79, 187);
+    transition: color 200ms;
+}
+
+
+/*------------ GRID --------------*/
+
+.section {
+    display: flex;
 }
 
 .grid {
+    width: 70%;
     display: grid;
-    margin: 32px 32px 0px 32px;
+    margin: 32px auto 0px auto;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 32px;
 }
 
 .curso-card {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
     margin-top: 20px;
     padding: 24px;
     border-radius: 10px;
-    background-color: #0c0914;
+    background-color: #000000;
+    height: 500px;
+}
+
+.img-card {
+    display: flex;
 }
 
 .img-card img {
-    width: 100%;
-    height: 200px;
+    margin: 0 auto;
 }
 
 .content-card {
-    margin-top: 50px;
+    margin: auto 0;
+    padding: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
 .car_price {
+    margin: auto;
     background-color: #352a5c;
     filter: brightness(80%);
     padding: 5px 20px;
