--- a/desafio-03.1/views/content.njk
+++ b/desafio-03.1/views/content.njk
@@ -1,23 +1,6 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.njk" %}
 
-<head>
-    <link rel="icon" href="https://raw.githubusercontent.com/Rocketseat/bootcamp-launchbase-desafios-02/master/desafios/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="/styles/index.css">
-    <link rel="stylesheet" href="/styles/conteudos.css">
-</head>
-
-<body>
-    <header>
-        <div>
-            <a target="_blank" href="https://discord.com/invite/gCRAFhc">Comunidade</a>
-            <a href="mailto:oi@rocketseat.com.br">E-mail</a>
-            <a href="tel:+5547992078767">Telefone</a>
-            <a href="sobre.html">Sobre</a>
-            <a href="/">Conteúdos</a>
-        </div>
-    </header>
+    {% block content %}
     <div class="section">
         <section class="grid">
             <div class="curso-card" id="starter">
@@ -63,6 +46,4 @@
         </div>
     </div>
     <script src="script.js"></script>
-</body>
-
-</html>
+    {% endblock %}
