Modificações - Foodfy refatorado com NodeJs - Páginas como .njk - Reaproveitando header e footer

--- a/Foodfy/dev/front-end/public/section.css
+++ b/Foodfy/dev/front-end/public/section.css
@@ -6,8 +6,12 @@
     gap: 20px;
 }
 
-#revenue {
+.more-acessed-cards {
     margin-top: 50px;
+}
+
+.revenue-card {
+    cursor: pointer;
 }
 
 .img-card img {
