--- a/Foodfy/dev/front-end/public/header-footer.css
+++ b/Foodfy/dev/front-end/public/header-footer.css
@@ -22,6 +22,10 @@ a {
     margin-left: 105px;
 }
 
+.content img {
+    cursor: pointer;
+}
+
 .content header div a {
     font-family: Roboto-Regular;
     font-size: 16px;
