--- a/Foodfy/dev/front-end/views/index.njk
+++ b/Foodfy/dev/front-end/views/index.njk
@@ -1,30 +1,15 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="styles/header-footer.css">
-    <link rel="stylesheet" href="styles/section.css">
-    <title>Foodfy</title>
-</head>
-
-<body>
-    <div class="content">
-        <header>
-            <img src="assets/logo.png" alt="Logo">
-            <div>
-                <a href="sobre.html">Sobre</a>
-                <a href="receitas.html">Receitas</a>
-            </div>
-        </header>
+{% extends "layout.njk" %} 
+{% block head %}
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/section.css">
+{% endblock%}
+{% block content %}
         <div class="banner">
             <div class="title-banner">
                 <h1>As melhores receitas</h1>
                 <p>Aprenda a construir os melhores pratos com receitas criadas por profissionais do mundo inteiro.</p>
             </div>
-            <img src="assets/chef.png" alt="Chef">
+            <img src="../assets/chef.png" alt="Chef">
         </div>
         <div id="title-acessed">
             <h1>Mais acessadas</h1>
@@ -88,14 +73,6 @@
                     <h1>Asinhas de frango ao barbecue</h1>
                     <p>por Vania Steroski</p>
                 </div>
-
             </div>
-
         </section>
-    </div>
-    <div class="footer">
-        <p>Todos direitos reservados, receitas Foodfy.</p>
-    </div>
-</body>
-
-</html>
+{% endblock %}
