--- a/desafio-03.3/public/index.css
+++ b/desafio-03.3/public/index.css
@@ -16,6 +16,7 @@ body {
     color: white;
 }
 
+footer,
 header {
     background: rgba(0, 0, 0, 0.5);
     text-align: center;
@@ -37,6 +38,18 @@ header div a {
 header div a:hover {
     color: rgb(108, 79, 187);
     transition: color 200ms;
+}
+
+footer {
+    margin-top: 50px;
+}
+
+footer div p+p {
+    margin-top: 15px;
+}
+
+.content {
+    min-height: 675px;
 }
 
 
