--- a/desafio-03.3/views/layout.njk
+++ b/desafio-03.3/views/layout.njk
@@ -25,8 +25,18 @@
             <a href="/">Conteúdos</a>
         </div>
     </header>
+    <div class='content'>
+
  {% block content %}
  {% endblock %}
-</body>
+    </div>
+ <footer> 
 
+     <div >
+         <p>Residencial Acalanto - R. Guilherme Gemballa, 260 - Sala 3 - Jardim América, Rio do Sul - SC, 89160-188</p>
+         <p class="copyright" >Rocketseat © 2020 - Todos os direitos reservados</p>
+     </div>
+ </footer>
+</body>
+  <script src="script.js"></script>
 </html>
